--- a/package.json
+++ b/package.json
@@ -7,8 +7,19 @@
   "dependencies": {
   },
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.9.0",
+    "babel-loader": "^8.1.0",
+    "rollup": "^2.3.3",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^5.3.0"
   },
-  "main": "src",
+  "module": "esm",
   "scripts": {
+    "clean": "rm -rf esm",
+    "build": "rollup -c"
   }
 }
