--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^5.3.0"
   },
+  "main": "esm",
   "module": "esm",
   "scripts": {
     "build": "rollup -c"
