--- a/.babelrc.json
+++ b/.babelrc.json
@@ -4,12 +4,17 @@
 			"@babel/preset-env",
 			{
 				"targets": {
-					"browsers": "Chrome >= 55, Firefox >= 53, Edge >= 15, Safari >= 11, iOS >= 11, Android >= 79"
+					"esmodules": true
 				}
 			}
 		]
 	],
 	"plugins": [
-		"@babel/plugin-proposal-class-properties"
+		[
+			"@babel/plugin-proposal-class-properties",
+			{
+				"loose": true
+			}
+		]
 	]
 }
