--- a/package.json
+++ b/package.json
@@ -4,22 +4,23 @@
   "private": true,
   "author": "53JS",
   "license": "UNLICENSED",
-  "dependencies": {
-  },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
     "babel-loader": "^8.1.0",
-    "rollup": "^2.3.3",
+    "rollup": "^2.7.3",
     "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-terser": "^5.3.0"
   },
   "main": "esm",
+  "types": "src/index.d.ts",
   "module": "esm",
   "scripts": {
+    "clean": "rm -rf esm",
     "build": "rollup -c"
   }
 }
