--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "babel-loader": "^8.1.0",
+    "del-cli": "^3.0.1",
     "rollup": "^2.7.3",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-node-builtins": "^2.1.2",
@@ -20,7 +21,7 @@
   "types": "src/index.d.ts",
   "module": "esm",
   "scripts": {
-    "clean": "rm -rf esm",
+    "clean": "del esm",
     "build": "rollup -c"
   }
 }
