--- a/package.json
+++ b/package.json
@@ -4,24 +4,58 @@
   "private": true,
   "author": "53JS",
   "license": "UNLICENSED",
+  "scriptPreprocessor": "node_modules/babel-jest",
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.11.5",
     "@rollup/plugin-commonjs": "^15.0.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
+    "@types/jest": "^26.0.7",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^26.1.0",
     "babel-loader": "^8.1.0",
     "del-cli": "^3.0.1",
+    "jest": "^26.1.0",
     "rollup": "^2.27.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "ts-jest": "^26.1.3"
   },
   "main": "esm",
   "types": "src/index.d.ts",
   "module": "esm",
   "scripts": {
     "clean": "del esm",
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "test": "jest --verbose"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "verbose": true,
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.(ts|js)$": "ts-jest"
+    },
+    "moduleFileExtensions": [
+      "ts",
+      "js",
+      "json",
+      "node"
+    ],
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(ts|js)$",
+    "coverageDirectory": "coverage",
+    "collectCoverageFrom": [
+      "src/**/*.{ts,js}",
+      "!src/**/*.d.ts"
+    ],
+    "globals": {
+      "ts-jest": {
+        "tsConfig": {
+          "allowJs": true
+        }
+      }
+    }
   }
 }
