--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "rollup": "^2.27.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "typedoc": "^0.19.2",
+    "typescript": "^4.0.5"
   },
   "main": "esm",
   "types": "src/index.d.ts",
