--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-terser": "^7.0.2",
-    "ts-jest": "^26.1.3"
+    "ts-jest": "^26.1.3",
     "typedoc": "^0.19.2",
     "typescript": "^4.0.5"
   },
