--- a/package.json
+++ b/package.json
@@ -1,36 +1,29 @@
 {
   "name": "sdk",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
-  "author": "53JS",
+  "author": "WebAudioModules",
   "license": "UNLICENSED",
   "scriptPreprocessor": "node_modules/babel-jest",
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-env": "^7.11.5",
-    "@rollup/plugin-commonjs": "^15.0.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@types/jest": "^26.0.7",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^26.1.0",
-    "babel-loader": "^8.1.0",
-    "del-cli": "^3.0.1",
-    "jest": "^26.1.0",
-    "regenerator-runtime": "^0.13.7",
-    "rollup": "^2.27.1",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-terser": "^7.0.2",
-    "ts-jest": "^26.1.3",
-    "typedoc": "^0.19.2",
-    "typescript": "^4.0.5"
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@types/jest": "^26.0.23",
+    "babel-jest": "^27.0.5",
+    "del-cli": "^4.0.0",
+    "jest": "^27.0.5",
+    "rollup": "^2.52.2",
+    "ts-jest": "^27.0.3",
+    "typedoc": "^0.21.0",
+    "typescript": "^4.3.4"
   },
   "main": "esm",
   "types": "src/index.d.ts",
   "module": "esm",
   "scripts": {
-    "clean": "del esm",
+    "clean": "del-cli esm",
     "build": "rollup -c",
     "test": "jest"
   }
