--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "scripts": {
     "clean": "del-cli esm",
     "build": "rollup -c",
-    "test": "jest"
+    "test": "jest",
+    "prepack": "yarn build"
   }
 }
