--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
   "main": "dist/index.js",
   "types": "src/index.d.ts",
   "scripts": {
-    "clean": "del-cli esm",
-    "build": "rollup -c",
-    "test": "jest",
-    "prepack": "yarn build"
+    "build": "esbuild src/index.js --target=es2017 --bundle --sourcemap --outdir=dist --format=esm",
+    "test": "jest"
   },
   "keywords": [
     "webaudio",
@@ -25,14 +23,16 @@
   },
   "scriptPreprocessor": "node_modules/babel-jest",
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-typescript": "^7.15.0",
     "@types/jest": "^27.0.2",
     "@webaudiomodules/api": "^2.0.0-alpha.0",
     "esbuild": "^0.13.8",
     "jest": "^27.0.5",
-    "ts-jest": "^27.0.3",
     "typescript": "^4.4.3"
   },
-  "module": "esm",
+  "module": "dist",
   "bugs": {
     "url": "https://github.com/%40webaudiomodules/sdk/issues"
   },
