--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@webaudiomodules/sdk",
   "version": "0.0.1",
-  "description": "WebAudioModules Plugin API",
+  "description": "WebAudioModules Plugin SDK",
   "type": "module",
   "main": "dist/index.js",
   "types": "src/index.d.ts",
