--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scriptPreprocessor": "node_modules/babel-jest",
   "devDependencies": {
     "@types/jest": "^27.0.2",
-    "@webaudiomodules/api": "^2.0.0-alpha.1",
+    "@webaudiomodules/api": "file:../api",
     "esbuild": "^0.13.9",
     "esbuild-jest": "^0.5.0",
     "jest": "^27.3.1",
