--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scriptPreprocessor": "node_modules/babel-jest",
   "devDependencies": {
     "@types/jest": "^27.0.2",
-    "@webaudiomodules/api": "file:../api",
+    "@webaudiomodules/api": "^2.0.0-alpha.2",
     "esbuild": "^0.13.9",
     "esbuild-jest": "^0.5.0",
     "jest": "^27.3.1",
@@ -34,6 +34,5 @@
   "bugs": {
     "url": "https://github.com/%40webaudiomodules/sdk/issues"
   },
-  "homepage": "https://github.com/%40webaudiomodules/sdk#readme",
-  "dependencies": {}
+  "homepage": "https://github.com/%40webaudiomodules/sdk#readme"
 }
