--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   },
   "scriptPreprocessor": "node_modules/babel-jest",
   "devDependencies": {
+    "@webaudiomodules/api": "../api",
     "@types/jest": "^27.0.2",
-    "@webaudiomodules/api": "^2.0.0-alpha.2",
     "esbuild": "^0.13.9",
     "esbuild-jest": "^0.5.0",
     "jest": "^27.3.1",
