--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webaudiomodules/sdk",
-  "version": "0.0.7",
+  "version": "0.0.5",
   "description": "WebAudioModules Plugin SDK",
   "type": "module",
   "main": "dist/index.js",
@@ -23,9 +23,9 @@
   },
   "scriptPreprocessor": "node_modules/babel-jest",
   "devDependencies": {
-    "@webaudiomodules/api": "../api",
     "@types/jest": "^27.0.2",
-    "esbuild": "^0.13.9",
+    "@webaudiomodules/api": "^2.0.0-alpha.2",
+    "esbuild": "^0.14.2",
     "esbuild-jest": "^0.5.0",
     "jest": "^27.3.1",
     "typescript": "^4.4.4"
