--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webaudiomodules/sdk",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "WebAudioModules Plugin SDK",
   "type": "module",
   "main": "dist/index.js",
@@ -23,12 +23,13 @@
   },
   "scriptPreprocessor": "node_modules/babel-jest",
   "devDependencies": {
-    "@types/jest": "^27.0.2",
-    "@webaudiomodules/api": "^2.0.0-alpha.2",
+    "@types/jest": "^27.0.3",
+    "@webaudiomodules/api": "file:../api",
+    "dts-bundle-generator": "^6.2.0",
     "esbuild": "^0.14.2",
     "esbuild-jest": "^0.5.0",
-    "jest": "^27.3.1",
-    "typescript": "^4.4.4"
+    "jest": "^27.4.4",
+    "typescript": "^4.5.3"
   },
   "module": "dist",
   "bugs": {
