--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "types": "src/index.d.ts",
   "scripts": {
-    "build": "esbuild src/index.js --target=es2017 --bundle --sourcemap --outdir=dist --format=esm",
+    "build": "esbuild src/index.js --target=esnext --bundle --sourcemap --outdir=dist --format=esm",
     "test": "jest"
   },
   "keywords": [
