--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
 		"moduleResolution": "node",
 		"baseUrl": "../",
 		"target": "es6",
+		"module": "esnext",
 		"allowSyntheticDefaultImports": true,
 		"noEmit": true,
 		"experimentalDecorators": true
