--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/%40webaudiomodules/sdk.git"
+    "url": "git+https://github.com/webaudiomodules/sdk.git"
   },
   "scriptPreprocessor": "node_modules/babel-jest",
   "devDependencies": {
